--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -1,5 +1,14 @@
-
 <footer class="bg-white dark:bg-gray-700">
+  <div class="footer-changes flex items-center justify-center estefooter relative">
+    <div class=" flex items-center w-full py-2 px-2 max-w-screen-md mx-auto">
+      <h1 class="flex-1 text-center text-xl md:text-2xl lg:text-3xl">REGISTRATE PARA ACCEDER A TODOS LOS BENEFICIOS DEL MES</h1>
+      <button class="btn btn-outline-secondary text-lg uppercase style-button ml-2 md:ml-4 lg:ml-6">REGISTRARSE →</button>
+    </div>
+  </div>
+
+
+
+
   <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
       <div class="md:flex md:justify-between">
         <div class="mb-6 md:mb-0">
