--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<section class="shadow-lg font-poppins dark:bg-white">
+<section class="shadow-lg font-poppins dark:bg-white sticky top-0">
   <div class="max-w-6xl px-4 mx-auto">
     <div class="relative flex items-center justify-between py-4">
       <div class="flex shrink-0 lg:w-auto lg:mr-0 title-center">
@@ -14,10 +14,10 @@
         </button>
       </div>
       <ul class="hidden lg:w-auto lg:space-x-12 lg:items-center lg:flex ">
-        <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-gray-900 transition-all duration-200 hover:bg-gray-100 hover:text-gray-900">Home</a></li>
-        <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-gray-900 transition-all duration-200 hover:bg-gray-100 hover:text-gray-900">About us</a></li>
-        <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-gray-900 transition-all duration-200 hover:bg-gray-100 hover:text-gray-900">Features</a></li>
-        <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-gray-900 transition-all duration-200 hover:bg-gray-100 hover:text-gray-900">Blog </a></li>
+        <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-gray-900">Home</a></li>
+        <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-gray-900">About us</a></li>
+        <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-gray-900">Features</a></li>
+        <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-red-500">OUTLET </a></li>
       </ul>
       <div class="hidden lg:block">
         <div class="group gap-3 flex items-center">
