--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,9 +1,10 @@
 <!-- header -->
+
 <header class="header pt-7">
   <div class="container-xl">
     <div class="grid grid-cols-1 md:grid-cols-2">
       <div class="md:col-span-1 flex justify-center order-2 md:order-1">
-        <div class="text-container p-4 pl-20 flex flex-col justify-center h-full mb-5">
+        <div class="text-container p-4 md:pl-7 lg:pl-20 flex flex-col justify-center h-full mb-5">
           <h1 class="text-4xl font-bold">Featuring the New Watch of Tomorrow</h1>
           <p class="text-lg text-secondary mt-4">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium animi eos debitis nostrum hic earum, accusantium quibusdam expedita. Sit et dolorem ex, ratione similique laboriosam.
@@ -21,80 +22,163 @@
 </header>
 
 
+<!-- CAROUSEL PRINCIPAL -->
 
-
-
-
-<!-- MAPA -->
-<div class="container my-12 py-12 mx-auto px-4 md:px-6 lg:px-12">
-  <section class="mb-20 text-gray-800">
-    <div class="md:flex md:flex-wrap justify-end"> <!-- Ajustar alineación hacia la derecha -->
-      <div class="xl:w-6/12 md:w-7/12 mb-6 lg:mb-0 md:pr-3">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.630124212085!2d-58.40536318529148!3d-34.60429218045747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3fc8f4b4ab%3A0x5b7fca5d682f8ea2!2sAv.%20Corrientes%203250%2C%20C1043AAX%20CABA!5e0!3m2!1sen!2sar!4v1643867513822!5m2!1sen!2sar"
-          class="h-80 w-full border-0 rounded-lg shadow-lg" allowfullscreen="" loading="lazy"></iframe>
-      </div>
-      <div class="xl:w-6/12 md:w-5/12 md:pl-3">
-        <div class="mb-10 md:mb-12">
-          <div class="flex items-start">
-            <div class="grow ml-6 mt-6">
-              <h1 class="text-center text-2xl font-bold text-black sm:text-3xl">Consultas</h1>
-
-              <form action="" class="mb-0 space-y-4 rounded-lg p-4 shadow-lg sm:p-6 lg:p-8">
-                  <div>
-                    <label for="email" class="sr-only">Email</label>
-
-                  <div class="relative">
-                    <input
-                      type="email"
-                      class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm"
-                      placeholder="Ingrese su email"
-                    />
-
-                    <span class="absolute inset-y-0 end-0 grid place-content-center px-4">
-                    <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        class="h-4 w-4 text-gray-400"
-                        fill="none"
-                        viewBox="0 0 24 24"
-                        stroke="currentColor"
-                          >
-                        <path
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                        stroke-width="2"
-                        d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207"
-                        />
-                      </svg>
-                    </span>
-                  </div>
-                </div>
-              <div>
-                        <label for="password" class="sr-only">Mensaje</label>
-
-                        <div class="relative">
-                          <input
-                            type="message"
-                            class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm"
-                            placeholder="Escriba su mensaje"
-                          />
-                      </div>
-                    </div>
-
-                  <button
-                  type="submit"
-                  class="block w-full rounded-lg bg-blue-600 px-5 py-3 text-sm font-medium text-white"
-                    >
-                  Enviar Mensaje
-                </button>
-              </form>
+<div class="w-full relative">
+  <h2 class="text-2xl font-bold mb-2 mt-8">TE INTERESA ALGUNO DE ESTOS PRODUCTOS?</h2>
+  <div class="flex items-center justify-center">
+    <button aria-label="slide backward" class="absolute z-30 left-0 ml-8 focus:outline-none focus:bg-gray-400 focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 cursor-pointer" (click)="goPrev()">
+      <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M7 1L1 7L7 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+      </svg>
+    </button>
+    <div class="w-full h-full mx-auto overflow-x-hidden overflow-y-hidden">
+      <div id="slider" class="h-full flex lg:gap-8 md:gap-6 gap-14 items-center justify-start transition ease-out duration-700">
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 1</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/DWrGxX6/carosel-2.png" alt="sitting area" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/tCfVky2/carosel-3.png" alt="sitting area" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/rFsGfr5/carosel-4.png" alt="sitting area" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/DWrGxX6/carosel-2.png" alt="sitting area" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/tCfVky2/carosel-3.png" alt="sitting area" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/rFsGfr5/carosel-4.png" alt="sitting area" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="texlg:t-xl le leading-4 text-basealg:ding-tight text-white">Catalog 2</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/DWrGxX6/carosel-2.png" alt="sitting area" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/tCfVky2/carosel-3.png" alt="sitting area" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
+          <img src="https://i.ibb.co/rFsGfr5/carosel-4.png" alt="sitting area" class="object-cover object-center w-full" />
+          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <div class="flex h-full items-end pb-6">
+              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+    <button aria-label="slide forward" class="absolute z-30 right-0 mr-8 focus:outline-none focus:bg-gray-400 focus:ring-2 focus:ring-offset-2 focus:ring-gray-400" (click)="goNext()">
+      <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M1 1L7 7L1 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+      </svg>
+    </button>
+  </div>
 </div>
+
+<!-- CARD PRINCIPAL -->
+<div class="flex flex-col justify-center items-center bg-gray-100 min-h-screen">
+  <div class="bg-white  shadow-lg overflow-hidden max-w-lg w-full">
+      <img src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/hp_mglp_t_carrousel_d_b53720f196.jpg" alt="Mountain" class="w-full h-64 object-cover">
+      <div class="p-6">
+          <h2 class="text-2xl font-bold text-gray-800 mb-2">Nuevas opciones de verano!</h2>
+          <p class="text-gray-700 leading-tight mb-4 letter">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu sapien porttitor, blandit velit ac,
+              vehicula elit. Nunc et ex at turpis rutrum viverra.
+          </p>
+          <div class="flex justify-between items-center">
+              <div class="flex items-center">
+                <button class="hover-button">
+                  <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
+                </button>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<!-- section imagen -->
+<div id="img-presentation" class="w-full h-full bg-cover bg-center">
+  <!-- imagen -->
+</div>
+
+
 
 
 <!-- OFERTAS -->
@@ -305,6 +389,82 @@
 </section>
 
 
+<!-- MAPA -->
+<div class="container my-12 py-12 mx-auto px-4 md:px-6 lg:px-12">
+  <section class="mb-20 text-gray-800">
+    <div class="md:flex md:flex-wrap justify-end">
+      <div class="xl:w-6/12 md:w-7/12 mb-6 lg:mb-0 md:pr-3">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.630124212085!2d-58.40536318529148!3d-34.60429218045747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3fc8f4b4ab%3A0x5b7fca5d682f8ea2!2sAv.%20Corrientes%203250%2C%20C1043AAX%20CABA!5e0!3m2!1sen!2sar!4v1643867513822!5m2!1sen!2sar"
+          class="h-80 w-full border-0 rounded-lg shadow-lg" allowfullscreen="" loading="lazy"></iframe>
+      </div>
+      <div class="xl:w-6/12 md:w-5/12 md:pl-3 sm:pr-6 map-mobile">
+        <div class="mb-10 md:mb-12">
+          <div class="flex items-start">
+            <div class="grow ml-6 mt-6">
+              <h1 class="text-center text-2xl font-bold text-black sm:text-3xl">Consultas</h1>
+
+              <form action="" class="mb-0 space-y-4 rounded-lg p-4 shadow-lg sm:p-6 lg:p-8">
+                  <div>
+                    <label for="email" class="sr-only">Email</label>
+
+                  <div class="relative">
+                    <input
+                      type="email"
+                      class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm"
+                      placeholder="Ingrese su email"
+                    />
+
+                    <span class="absolute inset-y-0 end-0 grid place-content-center px-4">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-4 w-4 text-gray-400"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor"
+                          >
+                        <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207"
+                        />
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              <div>
+                        <label for="password" class="sr-only">Mensaje</label>
+
+                        <div class="relative">
+                          <input
+                            type="message"
+                            class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm"
+                            placeholder="Escriba su mensaje"
+                          />
+                      </div>
+                    </div>
+
+                  <button
+                  type="submit"
+                  class="block w-full rounded-lg bg-blue-600 px-5 py-3 text-sm font-medium text-white"
+                    >
+                  Enviar Mensaje
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
+
+
+<!-- section imagen -->
+<div class="w-full h-30vh">
+  <div id="img-presentations" class="w-full h-full bg-cover bg-center"></div>
+</div>
 
 
 
