--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -22,123 +22,122 @@
 </header>
 
 
-<!-- CAROUSEL PRINCIPAL -->
 
-<div class="w-full relative">
-  <h2 class="text-2xl font-bold mb-2 mt-8">TE INTERESA ALGUNO DE ESTOS PRODUCTOS?</h2>
-  <div class="flex items-center justify-center">
+<!-- carousel secundario -->
+<div class="w-full relative pb-10">
+  <div class="flex items-center justify-center ">
     <button aria-label="slide backward" class="absolute z-30 left-0 ml-8 focus:outline-none focus:bg-gray-400 focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 cursor-pointer" (click)="goPrev()">
       <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M7 1L1 7L7 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        <path d="M7 1L1 7L7 13" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
     </button>
     <div class="w-full h-full mx-auto overflow-x-hidden overflow-y-hidden">
       <div id="slider" class="h-full flex lg:gap-8 md:gap-6 gap-14 items-center justify-start transition ease-out duration-700">
         <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" />
+          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" style="height: 30rem;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 1</h2>
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
+            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
             <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+              <button class="hover-button">
+                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
+              </button>
             </div>
           </div>
         </div>
         <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/DWrGxX6/carosel-2.png" alt="sitting area" class="object-cover object-center w-full" />
+          <img src="https://i.ibb.co/DWrGxX6/carosel-2.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
+            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
             <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+              <button class="hover-button">
+                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
+              </button>
             </div>
           </div>
         </div>
         <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/tCfVky2/carosel-3.png" alt="sitting area" class="object-cover object-center w-full" />
+          <img src="https://i.ibb.co/tCfVky2/carosel-3.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
+            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
             <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+              <button class="hover-button">
+                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
+              </button>
             </div>
           </div>
         </div>
         <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/rFsGfr5/carosel-4.png" alt="sitting area" class="object-cover object-center w-full" />
+          <img src="https://i.ibb.co/rFsGfr5/carosel-4.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
+            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
             <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+              <button class="hover-button">
+                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
+              </button>
             </div>
           </div>
         </div>
         <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" />
+          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" style="height: 30rem;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
+            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
             <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+              <button class="hover-button">
+                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
+              </button>
             </div>
           </div>
         </div>
         <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/DWrGxX6/carosel-2.png" alt="sitting area" class="object-cover object-center w-full" />
+          <img src="https://i.ibb.co/DWrGxX6/carosel-2.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
+            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
             <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+              <button class="hover-button">
+                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
+              </button>
             </div>
           </div>
         </div>
         <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/tCfVky2/carosel-3.png" alt="sitting area" class="object-cover object-center w-full" />
+          <img src="https://i.ibb.co/tCfVky2/carosel-3.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
+            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
             <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+              <button class="hover-button">
+                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
+              </button>
             </div>
           </div>
         </div>
         <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/rFsGfr5/carosel-4.png" alt="sitting area" class="object-cover object-center w-full" />
+          <img src="https://i.ibb.co/rFsGfr5/carosel-4.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
+            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
             <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+              <button class="hover-button">
+                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
+              </button>
             </div>
           </div>
         </div>
         <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" />
+          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" style="height: 30rem;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="texlg:t-xl le leading-4 text-basealg:ding-tight text-white">Catalog 2</h2>
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
+            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
             <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/DWrGxX6/carosel-2.png" alt="sitting area" class="object-cover object-center w-full" />
-          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
-            <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/tCfVky2/carosel-3.png" alt="sitting area" class="object-cover object-center w-full" />
-          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
-            <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/rFsGfr5/carosel-4.png" alt="sitting area" class="object-cover object-center w-full" />
-          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-white">Catalog 2</h2>
-            <div class="flex h-full items-end pb-6">
-              <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-white">Minimal Interior</h3>
+              <button class="hover-button">
+                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
+              </button>
             </div>
           </div>
         </div>
@@ -146,36 +145,22 @@
     </div>
     <button aria-label="slide forward" class="absolute z-30 right-0 mr-8 focus:outline-none focus:bg-gray-400 focus:ring-2 focus:ring-offset-2 focus:ring-gray-400" (click)="goNext()">
       <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M1 1L7 7L1 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+        <path d="M1 1L7 7L1 13" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
     </button>
   </div>
 </div>
 
-<!-- CARD PRINCIPAL -->
-<div class="flex flex-col justify-center items-center bg-gray-100 min-h-screen">
-  <div class="bg-white  shadow-lg overflow-hidden max-w-lg w-full">
-      <img src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/hp_mglp_t_carrousel_d_b53720f196.jpg" alt="Mountain" class="w-full h-64 object-cover">
-      <div class="p-6">
-          <h2 class="text-2xl font-bold text-gray-800 mb-2">Nuevas opciones de verano!</h2>
-          <p class="text-gray-700 leading-tight mb-4 letter">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu sapien porttitor, blandit velit ac,
-              vehicula elit. Nunc et ex at turpis rutrum viverra.
-          </p>
-          <div class="flex justify-between items-center">
-              <div class="flex items-center">
-                <button class="hover-button">
-                  <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-                </button>
-              </div>
-          </div>
-      </div>
-  </div>
-</div>
+
+
+<app-card-main></app-card-main>
+
+
 
 <!-- section imagen -->
-<div id="img-presentation" class="w-full h-full bg-cover bg-center">
+<div id="img-presentation">
   <!-- imagen -->
+  <img src="https://images.unsplash.com/photo-1499256573800-b2e09dc73631?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
 </div>
 
 
@@ -462,8 +447,9 @@
 
 
 <!-- section imagen -->
-<div class="w-full h-30vh">
-  <div id="img-presentations" class="w-full h-full bg-cover bg-center"></div>
+<div id="img-presentation">
+  <!-- imagen -->
+  <img src="https://images.unsplash.com/photo-1497681883844-82b4f0a359a4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
 </div>
 
 
