--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<section class="shadow-lg font-poppins dark:bg-white sticky top-0">
+<section class="shadow-lg font-poppins dark:bg-white sticky top-0 py-4 lg:py-0">
   <div class="max-w-6xl px-4 mx-auto">
-    <div class="relative flex items-center justify-between py-4">
+    <div class="relative flex items-center justify-between">
       <div class="flex shrink-0 lg:w-auto lg:mr-0 title-center">
         <a href="#" class="flex items-center">
           <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-black">HORUS</span>
@@ -20,7 +20,7 @@
         <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-red-500">OUTLET </a></li>
       </ul>
       <div class="hidden lg:block">
-        <div class="group gap-3 flex items-center">
+        <div class="group gap-5 flex items-center">
           <form action="" class="relative flex">
               <div class="container">
                   <input type="text" name="text" class="input" required="" placeholder="Busqueda...">
@@ -31,12 +31,29 @@
                           <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="32" d="M338.29 338.29L448 448"></path>
                       </svg>
               </div>
-          </div>
+            </div>
           </form>
+
+          <!-- CARRITO -->
+          <div class="bg-gray-100 mb-4 cursor-pointer">
+            <div class="relative py-2">
+          <div class="t-0 absolute left-3">
+            <p class="flex h-2 w-2 items-center justify-center rounded-full bg-red-500 p-3 text-xs text-white">1</p>
+          </div>
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="file: mt-4 h-6 w-6">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+            </svg>
+          </div>
+        </div>
+
           <a href="" href="" class="inline-flex items-center justify-center rounded-xl bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm transition-all duration-150 hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600">Catalogo</a>
         </div>
       </div>
     </div>
+
+    <!-- <div class="bg-gray-100 flex justify-center items-center"> -->
+
+
 
     <!-- MOBILE -->
     <div class="fixed inset-0 w-full bg-gray-900 opacity-25 dark:bg-gray-400 lg:hidden" [class.translate-x-0]="open" [class.-translate-x-full]="!open"></div>
