--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,26 +1,30 @@
-<section class="shadow-lg font-poppins dark:bg-white sticky top-0 py-4 lg:py-0">
-  <div class="max-w-6xl px-4 mx-auto">
-    <div class="relative flex items-center justify-between">
-      <div class="flex shrink-0 lg:w-auto lg:mr-0 title-center">
-        <a href="#" class="flex items-center">
-          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-black">HORUS</span>
-        </a>
-      </div>
-      <div class="lg:hidden">
-        <button class="flex items-center px-3 py-2 text-blue-600 border border-blue-200 rounded dark:text-gray-400 navbar-burger hover:text-blue-800 hover:border-blue-300 lg:hidden" (click)="toggleMenu()">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
-          </svg>
-        </button>
+<section class="shadow-lg font-poppins dark:bg-white sticky top-0 lg:py-0 pr-5">
+  <div class="max-w-6xl px-4 mx-auto ">
+    <div class="relative flex items-center justify-between ">
+      <!-- Botón en la izquierda -->
+      <div class="flex items-center">
+        <div class="lg:hidden">
+          <button class="flex items-center px-3 py-2 text-blue-600 border border-blue-200 rounded dark:text-gray-400 navbar-burger hover:text-blue-800 hover:border-blue-300 lg:hidden" (click)="toggleMenu()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
+            </svg>
+          </button>
+        </div>
+        <!-- Centro -->
+        <div class="title-center ">
+          <a href="#" class="flex items-center">
+            <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-black">HORUS</span>
+          </a>
+        </div>
       </div>
       <ul class="hidden lg:w-auto lg:space-x-12 lg:items-center lg:flex ">
-        <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-gray-900">Home</a></li>
+        <li><a href="" routerLink="/" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-gray-900">Home</a></li>
         <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-gray-900">About us</a></li>
         <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-gray-900">Features</a></li>
-        <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-red-500">OUTLET </a></li>
+        <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-red-500" routerLink="/shop">OUTLET </a></li>
       </ul>
-      <div class="hidden lg:block">
-        <div class="group gap-5 flex items-center">
+      <div class=" lg:block">
+        <div class="group lg:gap-5 gap-1 flex items-center">
           <form action="" class="relative flex">
               <div class="container">
                   <input type="text" name="text" class="input" required="" placeholder="Busqueda...">
@@ -35,7 +39,7 @@
           </form>
 
           <!-- CARRITO -->
-          <div class="bg-gray-100 mb-4 cursor-pointer">
+          <div class="bg-gray-100 mb-4 cursor-pointer bg-white" routerLink="/shopping">
             <div class="relative py-2">
           <div class="t-0 absolute left-3">
             <p class="flex h-2 w-2 items-center justify-center rounded-full bg-red-500 p-3 text-xs text-white">1</p>
@@ -46,7 +50,9 @@
           </div>
         </div>
 
-          <a href="" href="" class="inline-flex items-center justify-center rounded-xl bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm transition-all duration-150 hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600">Catalogo</a>
+        <a href="" href="" class="hidden lg:inline-flex items-center justify-center rounded-xl bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm transition-all duration-150 hover:bg-blue-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
+        routerLink="/shop">Catalogo</a>
+
         </div>
       </div>
     </div>
