--- a/src/app/components/main-page/card-secondary/card-secondary.component.html
+++ b/src/app/components/main-page/card-secondary/card-secondary.component.html
@@ -1,5 +1,5 @@
 <!-- carousel secundario -->
-<div class="w-full relative pb-10">
+<div class="w-full relative responsive">
   <div class="flex items-center justify-center ">
     <button aria-label="slide backward" class="absolute z-30 left-0 ml-8 focus:outline-none focus:bg-gray-400 focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 cursor-pointer" (click)="goPrev()">
       <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
