--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -2,18 +2,18 @@
 
 <header class="header pt-7">
   <div class="container-xl">
-    <div class="grid grid-cols-1 md:grid-cols-2">
-      <div class="md:col-span-1 flex justify-center order-2 md:order-1">
+    <div class="grid grid-cols-1 md:grid-cols-2 space-img">
+      <div class="md:col-span-1 flex justify-center order-2 md:order-1 pb-12">
         <div class="text-container p-4 md:pl-7 lg:pl-20 flex flex-col justify-center h-full mb-5">
           <h1 class="text-4xl font-bold">Featuring the New Watch of Tomorrow</h1>
           <p class="text-lg text-secondary mt-4">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium animi eos debitis nostrum hic earum, accusantium quibusdam expedita. Sit et dolorem ex, ratione similique laboriosam.
           </p>
-          <button class="btn btn-outline-secondary text-lg mt-4 uppercase style-button">IR AL OUTLET → </button>
+          <button class="btn btn-outline-secondary text-lg mt-4 uppercase style-button" routerLink="/shop" >IR AL OUTLET → </button>
         </div>
       </div>
       <div class="md:col-span-1 flex justify-center order-1 md:order-2">
-        <div class="image-container mb-5 px-4" id="showcaseImage">
+        <div class="image-container mb-5 px-4 image-wrappe" id="showcaseImage">
           <!--  imagen  -->
         </div>
       </div>
@@ -32,7 +32,7 @@
 
 
 <!-- section imagen -->
-<div class="img-presentation">
+<div class="img-presentation" >
   <!-- imagen -->
   <img src="https://images.unsplash.com/photo-1499256573800-b2e09dc73631?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
 </div>
@@ -249,9 +249,9 @@
 
 
 <!-- MAPA -->
-<div class="container my-12 py-12 mx-auto px-4 md:px-6 lg:px-12">
+<div class="container my-12  mx-auto px-4 md:px-6 lg:px-12">
   <section class="mb-20 text-gray-800">
-    <div class="md:flex md:flex-wrap justify-end">
+    <div class="md:flex md:flex-wrap justify-end ">
       <div class="xl:w-6/12 md:w-7/12 mb-6 lg:mb-0 md:pr-3">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3285.630124212085!2d-58.40536318529148!3d-34.60429218045747!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca3fc8f4b4ab%3A0x5b7fca5d682f8ea2!2sAv.%20Corrientes%203250%2C%20C1043AAX%20CABA!5e0!3m2!1sen!2sar!4v1643867513822!5m2!1sen!2sar"
@@ -260,7 +260,7 @@
       <div class="xl:w-6/12 md:w-5/12 md:pl-3 sm:pr-6 map-mobile">
         <div class="mb-10 md:mb-12">
           <div class="flex items-start">
-            <div class="grow ml-6 mt-6">
+            <div class="grow ml-6 mt-6 mr-5">
               <h1 class="text-center text-2xl font-bold text-black sm:text-3xl">Consultas</h1>
 
               <form action="" class="mb-0 space-y-4 rounded-lg p-4 shadow-lg sm:p-6 lg:p-8">
