--- a/src/app/components/main-page/main-page.component.css
+++ b/src/app/components/main-page/main-page.component.css
@@ -16,15 +16,17 @@ img {
   object-position: center 70%;
 }
 
-.img-presentation img{
+.img-presentation img {
   background-repeat: no-repeat;
   width: 100%;
   height: 30vh;
+  margin-top: 20px;
   object-fit: cover;
   object-position: center 70%;
 }
 
-.img-presentations img {
+
+.img-presentations img{
   background-repeat: no-repeat;
   width: 100%;
   height: 30vh;
@@ -41,6 +43,28 @@ img {
     height: 15vh;
   }
 }
+
+@media (max-height: 844px) {
+  img,
+  .img-presentation img,
+  .img-presentations img {
+    height: 200px;
+
+  }
+}
+
+@media screen and (max-width: 639px)  {
+  .img-presentation img {
+    width: 100%;
+    height: 20vh;
+  }
+
+  .img-presentations img {
+    width: 100%;
+    height: 20vh;
+  }
+}
+
 
 /* BOTON OUTLET */
 .style-button {
@@ -138,9 +162,18 @@ p, h1, h2 {
 }
 
 
-/* mapa-form responsive */
-@media (max-width: 400px) {
-  .map-mobile {
-    padding-right: 1.3rem;
+
+@media (max-width: 639px) and (max-height: 844px) {
+  .space-img {
+    padding-bottom: 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  #showcaseImage {
+    width: 100%;
+    background-size: 100% ;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 }
