--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,16 +1,15 @@
-<section class="shadow-lg font-poppins dark:bg-white sticky top-0 lg:py-0 pr-5">
-  <div class="max-w-6xl px-4 mx-auto ">
-    <div class="relative flex items-center justify-between ">
+<section class="shadow-lg font-poppins dark:bg-white sticky top-0 lg:py-0">
+  <div class="max-w-6xl px-3 mx-auto">
+    <div class="relative flex items-center justify-between">
       <!-- Botón en la izquierda -->
-      <div class="flex items-center">
+      <div class="flex items-center gap-2">
         <div class="lg:hidden">
-          <button class="flex items-center px-3 py-2 text-blue-600 border border-blue-200 rounded dark:text-gray-400 navbar-burger hover:text-blue-800 hover:border-blue-300 lg:hidden" (click)="toggleMenu()">
+          <button class="flex items-center mt-0 px-2 py-2 text-blue-600 border-none rounded dark:text-black navbar-burger hover:text-blue-800 hover:border-blue-300 lg:hidden" (click)="toggleMenu()">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z" />
             </svg>
           </button>
         </div>
-        <!-- Centro -->
         <div class="title-center ">
           <a href="#" class="flex items-center">
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-black">HORUS</span>
@@ -24,7 +23,7 @@
         <li><a href="" class="inline-block rounded-lg px-2 py-1 text-sm font-medium text-red-500" routerLink="/shop">OUTLET </a></li>
       </ul>
       <div class=" lg:block">
-        <div class="group lg:gap-5 gap-1 flex items-center">
+        <div class="group lg:gap-5 gap-1 pr-4 flex items-center">
           <form action="" class="relative flex">
               <div class="container">
                   <input type="text" name="text" class="input" required="" placeholder="Busqueda...">
