--- a/src/app/components/shop/products/products.component.html
+++ b/src/app/components/shop/products/products.component.html
@@ -1,7 +1,7 @@
 
 <!-- ✅ Grid Section - Starts Here 👇 -->
 <section id="Projects"
-  class="w-fit mx-auto grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 xs:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mb-5" style="margin-top: 100px; margin-bottom: 100px">
+  class="w-fit mx-auto grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mb-5 grid-responsive" style="margin-top: 100px; margin-bottom: 100px">
 
   <!--   ✅ Product card 1 - Starts Here 👇 -->
   <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
@@ -223,3 +223,4 @@
 
 <app-card-secondary></app-card-secondary>
 
+<div class="lg:mt-10"></div>
