--- a/src/app/components/shop/products/products.component.html
+++ b/src/app/components/shop/products/products.component.html
@@ -1,3 +1,19 @@
+<div *ngFor="let item of listaProductos; let i = index">
+<ng-container *ngIf="i < 2">
+<div class="flex flex-shrink-0 relative w-full sm:w-auto">
+  <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" style="height: 30rem;" />
+  <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
+    <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
+    <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
+    <div class="flex h-full items-end pb-6">
+      <button class="hover-button">
+        <span class="text-white-500 font-bold underline" (click)="onClick(item)">COMPRAR AHORA</span>
+      </button>
+    </div>
+  </div>
+ </div>
+</ng-container>
+</div>
 
 <!-- ✅ Grid Section - Starts Here 👇 -->
 <section id="Projects"
