--- a/src/app/components/shop/products/products.component.css
+++ b/src/app/components/shop/products/products.component.css
@@ -4,7 +4,7 @@
     grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 15px;
     justify-items: center;
-    padding: 0 15px;
+    padding: 0 50px;
     padding-left: 10px;
   }
 
@@ -13,8 +13,40 @@
     height: auto;
   }
 
+  .w-72 img {
+    max-width: 100%;
+    height: auto;
+  }
+
   .w-72:hover {
     transform: none;
     box-shadow: none;
+  }
+}
+
+
+@media (max-width: 440px) {
+  #Projects.grid-responsive {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 30px;
+    justify-items: center;
+    padding: 0 5px;
+  }
+
+  .w-72 {
+    width: 100%;
+    max-width: 180px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    height: auto;
+  }
+
+  .w-72 img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: center;
   }
 }
