--- a/src/app/components/shop/products/products.component.html
+++ b/src/app/components/shop/products/products.component.html
@@ -1,230 +1,31 @@
-<div *ngFor="let item of listaProductos; let i = index">
-<ng-container *ngIf="i < 2">
-<div class="flex flex-shrink-0 relative w-full sm:w-auto">
-  <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" style="height: 30rem;" />
-  <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-    <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
-    <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
-    <div class="flex h-full items-end pb-6">
-      <button class="hover-button">
-        <span class="text-white-500 font-bold underline" (click)="onClick(item)">COMPRAR AHORA</span>
-      </button>
-    </div>
-  </div>
- </div>
-</ng-container>
-</div>
 
-<!-- ✅ Grid Section - Starts Here 👇 -->
 <section id="Projects"
   class="w-fit mx-auto grid grid-cols-1 lg:grid-cols-4 md:grid-cols-2 justify-items-center justify-center gap-y-20 gap-x-14 mb-5 grid-responsive" style="margin-top: 100px; margin-bottom: 100px">
-
-  <!--   ✅ Product card 1 - Starts Here 👇 -->
+<div *ngFor="let item of listaProductos; let i = index">
   <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
-      <a href="#">
-          <img src="https://images.unsplash.com/photo-1646753522408-077ef9839300?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NjZ8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-                  alt="Product" class="h-80 w-72 object-cover rounded-t-xl" />
+          <img [src]="item.image"
+                  alt="Product" class="h-50 w-72 object-cover rounded-t-xl"/>
           <div class="px-4 py-3 w-72">
-              <span class="text-gray-400 mr-3 uppercase text-xs">Brand</span>
-              <p class="text-lg font-bold text-black truncate block capitalize">Product Name</p>
+              <span class="text-gray-400 mr-3 uppercase text-xs">{{ item.category }}</span>
+              <p class="text-lg font-bold text-black truncate block capitalize">{{ item.title }}</p>
               <div class="flex items-center">
-                  <p class="text-lg font-semibold text-black cursor-auto my-3">$149</p>
+                  <p class="text-lg font-semibold text-black cursor-auto my-3">${{ item.price }}</p>
                   <del>
                       <p class="text-sm text-gray-600 cursor-auto ml-2">$199</p>
                   </del>
-                  <div class="ml-auto"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                  <div (click)="onClick(item)" class="ml-auto cursor-pointer"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                           fill="currentColor" class="bi bi-bag-plus" viewBox="0 0 16 16">
                           <path fill-rule="evenodd"
                               d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z" />
                           <path
                               d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
-                      </svg></div>
+                      </svg>
+                    </div>
               </div>
           </div>
-      </a>
   </div>
-  <!--   🛑 Product card 1 - Ends Here  -->
-
-  <!--   ✅ Product card 2 - Starts Here 👇 -->
-  <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
-      <a href="#">
-          <img src="https://images.unsplash.com/photo-1651950519238-15835722f8bb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Mjh8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-                  alt="Product" class="h-80 w-72 object-cover rounded-t-xl" />
-          <div class="px-4 py-3 w-72">
-              <span class="text-gray-400 mr-3 uppercase text-xs">Brand</span>
-              <p class="text-lg font-bold text-black truncate block capitalize">Product Name</p>
-              <div class="flex items-center">
-                  <p class="text-lg font-semibold text-black cursor-auto my-3">$149</p>
-                  <del>
-                      <p class="text-sm text-gray-600 cursor-auto ml-2">$199</p>
-                  </del>
-                  <div class="ml-auto"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                          fill="currentColor" class="bi bi-bag-plus" viewBox="0 0 16 16">
-                          <path fill-rule="evenodd"
-                              d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z" />
-                          <path
-                              d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
-                      </svg></div>
-              </div>
-          </div>
-      </a>
-  </div>
-  <!--   🛑 Product card 2- Ends Here  -->
-
-  <!--   ✅ Product card 3 - Starts Here 👇 -->
-  <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
-      <a href="#">
-          <img src="https://images.unsplash.com/photo-1651950537598-373e4358d320?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8MjV8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-                  alt="Product" class="h-80 w-72 object-cover rounded-t-xl" />
-          <div class="px-4 py-3 w-72">
-              <span class="text-gray-400 mr-3 uppercase text-xs">Brand</span>
-              <p class="text-lg font-bold text-black truncate block capitalize">Product Name</p>
-              <div class="flex items-center">
-                  <p class="text-lg font-semibold text-black cursor-auto my-3">$149</p>
-                  <del>
-                      <p class="text-sm text-gray-600 cursor-auto ml-2">$199</p>
-                  </del>
-                  <div class="ml-auto"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                          fill="currentColor" class="bi bi-bag-plus" viewBox="0 0 16 16">
-                          <path fill-rule="evenodd"
-                              d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z" />
-                          <path
-                              d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
-                      </svg></div>
-              </div>
-
-          </div>
-      </a>
-  </div>
-  <!--   🛑 Product card 3 - Ends Here  -->
-
-  <!--   ✅ Product card 4 - Starts Here 👇 -->
-  <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
-      <a href="#">
-          <img src="https://images.unsplash.com/photo-1651950540805-b7c71869e689?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8Mjl8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-                  alt="Product" class="h-80 w-72 object-cover rounded-t-xl" />
-          <div class="px-4 py-3 w-72">
-              <span class="text-gray-400 mr-3 uppercase text-xs">Brand</span>
-              <p class="text-lg font-bold text-black truncate block capitalize">Product Name</p>
-              <div class="flex items-center">
-                  <p class="text-lg font-semibold text-black cursor-auto my-3">$149</p>
-                  <del>
-                      <p class="text-sm text-gray-600 cursor-auto ml-2">$199</p>
-                  </del>
-                  <div class="ml-auto"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                          fill="currentColor" class="bi bi-bag-plus" viewBox="0 0 16 16">
-                          <path fill-rule="evenodd"
-                              d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z" />
-                          <path
-                              d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
-                      </svg></div>
-              </div>
-          </div>
-      </a>
-  </div>
-  <!--   🛑 Product card 4 - Ends Here  -->
-
-  <!--   ✅ Product card 5 - Starts Here 👇 -->
-  <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
-      <a href="#">
-          <img src="https://images.unsplash.com/photo-1649261191624-ca9f79ca3fc6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NDd8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-                  alt="Product" class="h-80 w-72 object-cover rounded-t-xl" />
-          <div class="px-4 py-3 w-72">
-              <span class="text-gray-400 mr-3 uppercase text-xs">Brand</span>
-              <p class="text-lg font-bold text-black truncate block capitalize">Product Name</p>
-              <div class="flex items-center">
-                  <p class="text-lg font-semibold text-black cursor-auto my-3">$149</p>
-                  <del>
-                      <p class="text-sm text-gray-600 cursor-auto ml-2">$199</p>
-                  </del>
-                  <div class="ml-auto"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                          fill="currentColor" class="bi bi-bag-plus" viewBox="0 0 16 16">
-                          <path fill-rule="evenodd"
-                              d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z" />
-                          <path
-                              d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
-                      </svg></div>
-              </div>
-          </div>
-      </a>
-  </div>
-  <!--   🛑 Product card 5 - Ends Here  -->
-
-  <!--   ✅ Product card 6 - Starts Here 👇 -->
-  <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
-      <a href="#">
-          <img src="https://images.unsplash.com/photo-1649261191606-cb2496e97eee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NDR8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-                  alt="Product" class="h-80 w-72 object-cover rounded-t-xl" />
-          <div class="px-4 py-3 w-72">
-              <span class="text-gray-400 mr-3 uppercase text-xs">Brand</span>
-              <p class="text-lg font-bold text-black truncate block capitalize">Product Name</p>
-              <div class="flex items-center">
-                  <p class="text-lg font-semibold text-black cursor-auto my-3">$149</p>
-                  <del>
-                      <p class="text-sm text-gray-600 cursor-auto ml-2">$199</p>
-                  </del>
-                  <div class="ml-auto"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                          fill="currentColor" class="bi bi-bag-plus" viewBox="0 0 16 16">
-                          <path fill-rule="evenodd"
-                              d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z" />
-                          <path
-                              d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
-                      </svg></div>
-              </div>
-          </div>
-      </a>
-  </div>
-  <!--   🛑 Product card 6 - Ends Here  -->
-  <div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
-    <a href="#">
-        <img src="https://images.unsplash.com/photo-1649261191606-cb2496e97eee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NDR8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-                alt="Product" class="h-80 w-72 object-cover rounded-t-xl" />
-        <div class="px-4 py-3 w-72">
-            <span class="text-gray-400 mr-3 uppercase text-xs">Brand</span>
-            <p class="text-lg font-bold text-black truncate block capitalize">Product Name</p>
-            <div class="flex items-center">
-                <p class="text-lg font-semibold text-black cursor-auto my-3">$149</p>
-                <del>
-                    <p class="text-sm text-gray-600 cursor-auto ml-2">$199</p>
-                </del>
-                <div class="ml-auto"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                        fill="currentColor" class="bi bi-bag-plus" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                            d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z" />
-                        <path
-                            d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
-                    </svg></div>
-            </div>
-        </div>
-    </a>
 </div>
-<div class="w-72 bg-white shadow-md rounded-xl duration-500 hover:scale-105 hover:shadow-xl">
-  <a href="#">
-      <img src="https://images.unsplash.com/photo-1649261191606-cb2496e97eee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwcm9maWxlLXBhZ2V8NDR8fHxlbnwwfHx8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
-              alt="Product" class="h-80 w-72 object-cover rounded-t-xl" />
-      <div class="px-4 py-3 w-72">
-          <span class="text-gray-400 mr-3 uppercase text-xs">Brand</span>
-          <p class="text-lg font-bold text-black truncate block capitalize">Product Name</p>
-          <div class="flex items-center">
-              <p class="text-lg font-semibold text-black cursor-auto my-3">$149</p>
-              <del>
-                  <p class="text-sm text-gray-600 cursor-auto ml-2">$199</p>
-              </del>
-              <div class="ml-auto"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                      fill="currentColor" class="bi bi-bag-plus" viewBox="0 0 16 16">
-                      <path fill-rule="evenodd"
-                          d="M8 7.5a.5.5 0 0 1 .5.5v1.5H10a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0v-1.5H6a.5.5 0 0 1 0-1h1.5V8a.5.5 0 0 1 .5-.5z" />
-                      <path
-                          d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
-                  </svg></div>
-          </div>
-      </div>
-  </a>
-</div>
-
 </section>
-
-<!-- 🛑 Grid Section - Ends Here -->
 
 
 <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
