--- a/src/app/components/main-page/card-secondary/card-secondary.component.css
+++ b/src/app/components/main-page/card-secondary/card-secondary.component.css
@@ -36,6 +36,11 @@
   left: -30px;
 }
 
+.card-image {
+  max-width: 400px;
+  height: auto;
+}
+
 @media (max-width: 768px) {
   .responsive {
     position: relative;
