--- a/src/app/components/main-page/card-secondary/card-secondary.component.html
+++ b/src/app/components/main-page/card-secondary/card-secondary.component.html
@@ -1,5 +1,7 @@
 <!-- carousel secundario -->
 
+
+
 <div class="w-full relative responsive">
   <div class="flex items-center justify-center ">
     <button aria-label="slide backward" class="absolute z-30 left-0 ml-8 focus:outline-none focus:bg-gray-400 focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 cursor-pointer" (click)="goPrev()">
@@ -9,108 +11,12 @@
     </button>
     <div class="w-full h-full mx-auto overflow-x-hidden overflow-y-hidden">
       <div id="slider" class="h-full flex lg:gap-8 md:gap-6 gap-14 items-center justify-start transition ease-out duration-700">
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" style="height: 30rem;" />
+        <div *ngFor="let merch of merchList" class="flex flex-shrink-0 relative w-full sm:w-auto card-image">
+          <img [src]="merch.image" alt="black chair and white table" class="object-cover object-center w-full" style="height: 30rem;" />
           <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
-            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
-            <div class="flex h-full items-end pb-6">
-              <button class="hover-button">
-                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/DWrGxX6/carosel-2.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
-          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
-            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
-            <div class="flex h-full items-end pb-6">
-              <button class="hover-button">
-                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/tCfVky2/carosel-3.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
-          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
-            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
-            <div class="flex h-full items-end pb-6">
-              <button class="hover-button">
-                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/rFsGfr5/carosel-4.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
-          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
-            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
-            <div class="flex h-full items-end pb-6">
-              <button class="hover-button">
-                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" style="height: 30rem;" />
-          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
-            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
-            <div class="flex h-full items-end pb-6">
-              <button class="hover-button">
-                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/DWrGxX6/carosel-2.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
-          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
-            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
-            <div class="flex h-full items-end pb-6">
-              <button class="hover-button">
-                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/tCfVky2/carosel-3.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
-          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
-            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
-            <div class="flex h-full items-end pb-6">
-              <button class="hover-button">
-                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/rFsGfr5/carosel-4.png" alt="sitting area" class="object-cover object-center w-full" style="height: 30rem;" />
-          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
-            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
-            <div class="flex h-full items-end pb-6">
-              <button class="hover-button">
-                <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-shrink-0 relative w-full sm:w-auto">
-          <img src="https://i.ibb.co/fDngH9G/carosel-1.png" alt="black chair and white table" class="object-cover object-center w-full" style="height: 30rem;" />
-          <div class="bg-gray-800 bg-opacity-30 absolute w-full h-full p-6">
-            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">Catalog 1</h2>
-            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">Minimal Interior</h3>
-            <div class="flex h-full items-end pb-6">
+            <h2 class="lg:text-xl leading-4 text-base lg:leading-5 text-black">{{ merch.category }}</h2>
+            <h3 class="text-xl lg:text-2xl font-semibold leading-5 lg:leading-6 text-black">{{ merch.title }}</h3>
+            <div class="absolute bottom-0 pb-6">
               <button class="hover-button">
                 <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
               </button>
@@ -119,6 +25,7 @@
         </div>
       </div>
     </div>
+
     <button aria-label="slide forward" class="absolute z-30 right-0 mr-8 focus:outline-none focus:bg-gray-400 focus:ring-2 focus:ring-offset-2 focus:ring-gray-400" (click)="goNext()">
       <svg width="8" height="14" viewBox="0 0 8 14" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M1 1L7 7L1 13" stroke="red" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
