--- a/src/app/components/main-page/card-main/card-main.component.html
+++ b/src/app/components/main-page/card-main/card-main.component.html
@@ -8,87 +8,12 @@
     </button>
     <div class="w-full h-full mx-auto overflow-x-hidden overflow-y-hidden" >
       <div id="sliderUno" class="h-full flex items-center justify-start transition ease-out duration-700 ">
-        <div class="flex flex-col min-h-0 flex-shrink-0 relative w-full sm:w-auto AJUSTAR ESTO">
+        <div *ngFor="let merch of listaMerch" class="flex flex-col min-h-0 flex-shrink-0 relative w-full sm:w-auto">
           <div class="bg-white shadow-lg overflow-hidden max-w-md w-full little-screen">
-            <img src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/hp_mglp_t_carrousel_d_b53720f196.jpg" alt="Mountain" class="w-full h-64 object-none" style="height: 30rem;">
+            <img [src]="merch.image" alt="Mountain" class="w-full h-64 object-none" style="height: 30rem;">
               <div class="p-6">
-                  <h2 class="text-2xl font-bold text-gray-800 mb-2">Nuevas opciones de verano!</h2>
-                  <p class="text-gray-600 leading-tight mb-4 letter">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu sapien porttitor, blandit velit ac,
-                      vehicula elit. Nunc et ex at turpis rutrum viverra.
-                  </p>
-                  <div class="flex justify-between items-center">
-                      <div class="flex items-center">
-                        <button class="hover-button">
-                          <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-                        </button>
-                      </div>
-                  </div>
-              </div>
-          </div>
-        </div>
-        <div class="flex flex-col min-h-0 flex-shrink-0 relative w-full sm:w-auto sm:ml-[0rem] little-screen">
-          <div class="bg-white shadow-lg overflow-hidden max-w-md w-full ml-[-1rem]">
-            <img src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/hp_mglp_t_carrousel_d_b53720f196.jpg" alt="Mountain" class="w-full h-64 object-none" style="height: 30rem;">
-              <div class="p-6">
-                  <h2 class="text-2xl font-bold text-gray-800 mb-2">Nuevas opciones de verano!</h2>
-                  <p class="text-gray-600 leading-tight mb-4 letter">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu sapien porttitor, blandit velit ac,
-                      vehicula elit. Nunc et ex at turpis rutrum viverra.
-                  </p>
-                  <div class="flex justify-between items-center">
-                      <div class="flex items-center">
-                        <button class="hover-button">
-                          <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-                        </button>
-                      </div>
-                  </div>
-              </div>
-          </div>
-        </div>
-        <div class="flex flex-col min-h-0 flex-shrink-0 relative w-full sm:w-auto">
-          <div class="bg-white shadow-lg overflow-hidden max-w-md w-full ml-[-1rem] little-screen">
-            <img src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/hp_mglp_t_carrousel_d_b53720f196.jpg" alt="Mountain" class="w-full h-64 object-none" style="height: 30rem;">
-              <div class="p-6">
-                  <h2 class="text-2xl font-bold text-gray-800 mb-2">Nuevas opciones de verano!</h2>
-                  <p class="text-gray-600 leading-tight mb-4 letter">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu sapien porttitor, blandit velit ac,
-                      vehicula elit. Nunc et ex at turpis rutrum viverra.
-                  </p>
-                  <div class="flex justify-between items-center">
-                      <div class="flex items-center">
-                        <button class="hover-button">
-                          <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-                        </button>
-                      </div>
-                  </div>
-              </div>
-          </div>
-        </div>
-        <div class="flex flex-col min-h-0 flex-shrink-0 relative w-full sm:w-auto ">
-          <div class="bg-white shadow-lg overflow-hidden max-w-md w-full ml-[-1rem] little-screen">
-            <img src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/hp_mglp_t_carrousel_d_b53720f196.jpg" alt="Mountain" class="w-full h-64 object-none" style="height: 30rem;">
-              <div class="p-6">
-                  <h2 class="text-2xl font-bold text-gray-800 mb-2">Nuevas opciones de verano!</h2>
-                  <p class="text-gray-600 leading-tight mb-4 letter">
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu sapien porttitor, blandit velit ac,
-                      vehicula elit. Nunc et ex at turpis rutrum viverra.
-                  </p>
-                  <div class="flex justify-between items-center">
-                      <div class="flex items-center">
-                        <button class="hover-button">
-                          <span class="text-white-500 font-bold underline">COMPRAR AHORA</span>
-                        </button>
-                      </div>
-                  </div>
-              </div>
-          </div>
-        </div>
-        <div class="flex flex-col min-h-0 flex-shrink-0 relative w-full sm:w-auto">
-          <div class="bg-white shadow-lg overflow-hidden max-w-md w-full ml-[-1rem] little-screen">
-            <img src="https://brand.assets.adidas.com/image/upload/f_auto,q_auto,fl_lossy/if_w_gt_400,w_400/hp_mglp_t_carrousel_d_b53720f196.jpg" alt="Mountain" class="w-full h-64 object-none" style="height: 30rem;">
-              <div class="p-6">
-                  <h2 class="text-2xl font-bold text-gray-800 mb-2">Nuevas opciones de verano!</h2>
+                  <h2 class="text-2xl font-bold text-gray-800 mb-2">{{ merch.title }}</h2>
+                  <p class="text-1xl font-bold text-gray-700 mb-1">PRECIO: {{ merch.price | currency }}</p>
                   <p class="text-gray-600 leading-tight mb-4 letter">
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu sapien porttitor, blandit velit ac,
                       vehicula elit. Nunc et ex at turpis rutrum viverra.
