--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -323,7 +323,7 @@
 <!-- section imagen -->
 <div class="img-presentations">
   <!-- imagen -->
-  <img src="https://images.unsplash.com/photo-1497681883844-82b4f0a359a4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+  <img src="https://www.apple.com/v/iphone/buy/l/images/meta/iphone_buy__chvehwtfgamq_og.jpg?202304251015" alt="">
 </div>
 
 
