--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,4 +1,4 @@
-<app-navbar [itemCount]="products.length"></app-navbar>
+<app-navbar [itemCount]="totalQuantity"></app-navbar>
   <router-outlet></router-outlet>
 <app-footer></app-footer>
 
