--- a/src/app/components/shop/details/details.component.html
+++ b/src/app/components/shop/details/details.component.html
@@ -28,29 +28,9 @@
           </span>
         </div>
         <p class="leading-relaxed">Fam locavore kickstarter distillery. Mixtape chillwave tumeric sriracha taximy chia microdosing tilde DIY. XOXO fam indxgo juiceramps cornhole raw denim forage brooklyn. Everyday carry +1 seitan poutine tumeric. Gastropub blue bottle austin listicle pour-over, neutra jean shorts keytar banjo tattooed umami cardigan.</p>
-        <div class="flex mt-6 items-center pb-5 border-b-2 border-gray-200 mb-5">
-          <div class="flex ml-6 items-center">
-            <span class="mr-3">Cantidad</span>
-            <div class="relative">
-              <select [(ngModel)]="cantidadElegida" class="rounded border appearance-none border-gray-400 py-2 focus:outline-none focus:border-red-500 text-base pl-3 pr-10">
-                <option *ngFor="let quantity of cantidades" [value]="quantity">{{ quantity }}</option>
-              </select>
-              <span class="absolute right-0 top-0 h-full w-10 text-center text-gray-600 pointer-events-none flex items-center justify-center">
-                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4" viewBox="0 0 24 24">
-                  <path d="M6 9l6 6 6-6"></path>
-                </svg>
-              </span>
-            </div>
-          </div>
-        </div>
         <div class="flex">
           <span class="title-font font-medium text-2xl text-gray-900">{{ productDetails.price | currency }}</span>
-          <button (click)="addCart(productDetails)" class="flex ml-auto text-white bg-blue-600 border-0 py-2 px-6 font-semibold focus:outline-none hover:bg-blue-500 rounded-xl">Agregar al carrito</button>
-          <button class="rounded-full w-10 h-10 bg-gray-200 p-0 border-0 inline-flex items-center justify-center text-gray-500 ml-4">
-            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
-              <path d="M20.84 4.61a5.5 5.5 0 00-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 00-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 000-7.78z"></path>
-            </svg>
-          </button>
+          <button (click)="addCart(productDetails)" routerLink="/shopping" class="flex ml-auto text-white bg-blue-600 border-0 py-2 px-6 font-semibold focus:outline-none hover:bg-blue-500 rounded-xl">Agregar al carrito</button>
         </div>
       </div>
     </div>
